# lasotuvi

./: .gitignore  .travis.yml  ANSAO.md  LICENSE  Ngu hanh nap am.docx  README  README.md  TODO.md  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
_example/: lasotuvi.unitapi.com.conf  manage.py  uwsgi
_example/frontend/: index.html  lstv.js  simpleserver
_example/lasotuvi/: urls.py
_example/lasotuvi/src/: AmDuong.py  ThienBan.py  lstv.py
amlich/: amlich.py  critical.py  index.html  init.js
api/src/: DiaBan.py  Sao.py  lichamduong.py  lstv.py
docs/: Sao.xlsx  lich.md
frontend/: index.html  laso.json  lstv.js  style.css
imgbackend/: ToImage.py
imgbackend/src/: ThienBan.py  lichamduong.py  lstv.py
lasotuvi/: AmDuong.py  App.py  DiaBan.py  ErrorHandling.py  Hanh.py  Lich.py  Lich_EPHEM.py  Lich_HND.py  Sao.py  Sao_test.py  ThienBan.py  ToImage.py  __init__.py  lich_HND_JS.py  primitive.py  settings.py  test_Hanh.py  urls.py  wsgi.py
lasotuvi/src/: AmDuong.py  DiaBan.py  Sao.py  ThienBan.py  lstv.py
lasotuvi/test/: amlich.py
src/: AmDuong.py  App.py  DiaBan.py  Lich.py  Sao.py  __init__.py  lich_bak.py
tests/: test_amlich.py  test_day_in_lunar_year.py  test_diaban.py  test_find_new_moon_between.py  test_hanh.py  test_lich.py  test_lich_HND_JS.py  test_lich_HND_new_moon.py  test_s2l.py  test_sao.py  test_thienban.py
