[tool.poetry]
name = "lasotuvi"
version = "0.1.0"
description = ""
authors = ["doanguyen <dungnv2410@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ephem = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.1"
coverage = "^4.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
